# MagmaKey

./: .gitignore  LICENSE  MIT License.txt  README.md  README.txt  config.py  lava_animation.py  main.py  password_generator.py  publish.yml  pyproject.toml  requirements.txt  setup.cfg  setup.iss  ui.kv  ui.py
.github/workflows/: build.yml  publish.yml
